k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bohrium-agents
  namespace: uni-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bohrium-agents
  template:
    metadata:
      labels:
        app: bohrium-agents
    spec:
      containers:
        - name: api
          image: registry.dp.tech/mlops/bohrium-agents:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
          imagePullPolicy: Always
